clusters/dev/applications/guacamole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: guacamole
  name: guacamole-deployment
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  strategy: {}
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      volumes:
      - name: guacamoledb-init
        emptyDir:
          sizeLimit: 500Mi
      - name: postgres-data
        persistentVolumeClaim:
          claimName: guacamole-pv-claim
      containers:
      - image: postgres:14
        name: guacamoledb
        resources:
          limits:
            cpu: "0.5"
            memory: 250Mi
          requests:
            cpu: 1m
            memory: 50Mi
        volumeMounts:
          - mountPath: /docker-entrypoint-initdb.d
            name: guacamoledb-init
          - mountPath: /var/lib/postgresql/data
            name: postgres-data
            readOnly: false
        ports:
          - containerPort: 5432
      - image: guacamole/guacd
        name: guacd
        resources:
          limits:
            cpu: "0.5"
            memory: 250Mi
          requests:
            cpu: 1m
            memory: 50Mi
        ports:
          - containerPort: 4822
      - image: guacamole/guacamole
        name: guacamole
        resources:
          limits:
            cpu: "0.5"
            memory: 250Mi
          requests:
            cpu: 1m
            memory: 50Mi
        ports:
          - containerPort: 8080
            name: guacamole-http
status: {}
